veilid-flutter/lib/bridge_generated.dart


  void _api_fill_to_wire_veilid_config(
      VeilidConfig apiObj, wire_VeilidConfig wireObj) {
    wireObj.program_name = _api2wire_String(apiObj.programName);
    wireObj.veilid_namespace = _api2wire_String(apiObj.veilidNamespace);
    wireObj.capabilities__protocol_udp =
        _api2wire_bool(apiObj.capabilitiesProtocolUdp);
    wireObj.capabilities__protocol_connect_tcp =
        _api2wire_bool(apiObj.capabilitiesProtocolConnectTcp);
    wireObj.capabilities__protocol_accept_tcp =
        _api2wire_bool(apiObj.capabilitiesProtocolAcceptTcp);
    wireObj.capabilities__protocol_connect_ws =
        _api2wire_bool(apiObj.capabilitiesProtocolConnectWs);
    wireObj.capabilities__protocol_accept_ws =
        _api2wire_bool(apiObj.capabilitiesProtocolAcceptWs);
    wireObj.capabilities__protocol_connect_wss =
        _api2wire_bool(apiObj.capabilitiesProtocolConnectWss);
    wireObj.capabilities__protocol_accept_wss =
        _api2wire_bool(apiObj.capabilitiesProtocolAcceptWss);
    wireObj.protected_store__allow_insecure_fallback =
        _api2wire_bool(apiObj.protectedStoreAllowInsecureFallback);
    wireObj.protected_store__always_use_insecure_storage =
        _api2wire_bool(apiObj.protectedStoreAlwaysUseInsecureStorage);
    wireObj.protected_store__insecure_fallback_directory =
        _api2wire_String(apiObj.protectedStoreInsecureFallbackDirectory);
    wireObj.protected_store__delete =
        _api2wire_bool(apiObj.protectedStoreDelete);
    wireObj.table_store__directory =
        _api2wire_String(apiObj.tableStoreDirectory);
    wireObj.table_store__delete = _api2wire_bool(apiObj.tableStoreDelete);
    wireObj.block_store__directory =
        _api2wire_String(apiObj.blockStoreDirectory);
    wireObj.block_store__delete = _api2wire_bool(apiObj.blockStoreDelete);
    wireObj.network__max_connections =
        _api2wire_u32(apiObj.networkMaxConnections);
    wireObj.network__connection_initial_timeout_ms =
        _api2wire_u32(apiObj.networkConnectionInitialTimeoutMs);
    wireObj.network__node_id = _api2wire_String(apiObj.networkNodeId);
    wireObj.network__node_id_secret =
        _api2wire_String(apiObj.networkNodeIdSecret);
    wireObj.network__bootstrap = _api2wire_StringList(apiObj.networkBootstrap);
    wireObj.network__upnp = _api2wire_bool(apiObj.networkUpnp);
    wireObj.network__natpmp = _api2wire_bool(apiObj.networkNatpmp);
    wireObj.network__enable_local_peer_scope =
        _api2wire_bool(apiObj.networkEnableLocalPeerScope);
    wireObj.network__restricted_nat_retries =
        _api2wire_u32(apiObj.networkRestrictedNatRetries);
    wireObj.network__rpc__concurrency =
        _api2wire_u32(apiObj.networkRpcConcurrency);
    wireObj.network__rpc__queue_size =
        _api2wire_u32(apiObj.networkRpcQueueSize);
    wireObj.network__rpc__max_timestamp_behind_ms =
        _api2wire_opt_box_autoadd_u32(apiObj.networkRpcMaxTimestampBehindMs);
    wireObj.network__rpc__max_timestamp_ahead_ms =
        _api2wire_opt_box_autoadd_u32(apiObj.networkRpcMaxTimestampAheadMs);
    wireObj.network__rpc__timeout_ms =
        _api2wire_u32(apiObj.networkRpcTimeoutMs);
    wireObj.network__rpc__max_route_hop_count =
        _api2wire_u8(apiObj.networkRpcMaxRouteHopCount);
    wireObj.network__dht__resolve_node_timeout_ms =
        _api2wire_opt_box_autoadd_u32(apiObj.networkDhtResolveNodeTimeoutMs);
    wireObj.network__dht__resolve_node_count =
        _api2wire_u32(apiObj.networkDhtResolveNodeCount);
    wireObj.network__dht__resolve_node_fanout =
        _api2wire_u32(apiObj.networkDhtResolveNodeFanout);
    wireObj.network__dht__max_find_node_count =
        _api2wire_u32(apiObj.networkDhtMaxFindNodeCount);
    wireObj.network__dht__get_value_timeout_ms =
        _api2wire_opt_box_autoadd_u32(apiObj.networkDhtGetValueTimeoutMs);
    wireObj.network__dht__get_value_count =
        _api2wire_u32(apiObj.networkDhtGetValueCount);
    wireObj.network__dht__get_value_fanout =
        _api2wire_u32(apiObj.networkDhtGetValueFanout);
    wireObj.network__dht__set_value_timeout_ms =
        _api2wire_opt_box_autoadd_u32(apiObj.networkDhtSetValueTimeoutMs);
    wireObj.network__dht__set_value_count =
        _api2wire_u32(apiObj.networkDhtSetValueCount);
    wireObj.network__dht__set_value_fanout =
        _api2wire_u32(apiObj.networkDhtSetValueFanout);
    wireObj.network__dht__min_peer_count =
        _api2wire_u32(apiObj.networkDhtMinPeerCount);
    wireObj.network__dht__min_peer_refresh_time_ms =
        _api2wire_u32(apiObj.networkDhtMinPeerRefreshTimeMs);
    wireObj.network__dht__validate_dial_info_receipt_time_ms =
        _api2wire_u32(apiObj.networkDhtValidateDialInfoReceiptTimeMs);
    wireObj.network__protocol__udp__enabled =
        _api2wire_bool(apiObj.networkProtocolUdpEnabled);
    wireObj.network__protocol__udp__socket_pool_size =
        _api2wire_u32(apiObj.networkProtocolUdpSocketPoolSize);
    wireObj.network__protocol__udp__listen_address =
        _api2wire_String(apiObj.networkProtocolUdpListenAddress);
    wireObj.network__protocol__udp__public_address =
        _api2wire_opt_String(apiObj.networkProtocolUdpPublicAddress);
    wireObj.network__protocol__tcp__connect =
        _api2wire_bool(apiObj.networkProtocolTcpConnect);
    wireObj.network__protocol__tcp__listen =
        _api2wire_bool(apiObj.networkProtocolTcpListen);
    wireObj.network__protocol__tcp__max_connections =
        _api2wire_u32(apiObj.networkProtocolTcpMaxConnections);
    wireObj.network__protocol__tcp__listen_address =
        _api2wire_String(apiObj.networkProtocolTcpListenAddress);
    wireObj.network__protocol__tcp__public_address =
        _api2wire_opt_String(apiObj.networkProtocolTcpPublicAddress);
    wireObj.network__protocol__ws__connect =
        _api2wire_bool(apiObj.networkProtocolWsConnect);
    wireObj.network__protocol__ws__listen =
        _api2wire_bool(apiObj.networkProtocolWsListen);
    wireObj.network__protocol__ws__max_connections =
        _api2wire_u32(apiObj.networkProtocolWsMaxConnections);
    wireObj.network__protocol__ws__listen_address =
        _api2wire_String(apiObj.networkProtocolWsListenAddress);
    wireObj.network__protocol__ws__path =
        _api2wire_String(apiObj.networkProtocolWsPath);
    wireObj.network__protocol__ws__url =
        _api2wire_opt_String(apiObj.networkProtocolWsUrl);
    wireObj.network__protocol__wss__connect =
        _api2wire_bool(apiObj.networkProtocolWssConnect);
    wireObj.network__protocol__wss__max_connections =
        _api2wire_u32(apiObj.networkProtocolWssMaxConnections);
    wireObj.network__leases__max_server_signal_leases =
        _api2wire_u32(apiObj.networkLeasesMaxServerSignalLeases);
    wireObj.network__leases__max_server_relay_leases =
        _api2wire_u32(apiObj.networkLeasesMaxServerRelayLeases);
    wireObj.network__leases__max_client_signal_leases =
        _api2wire_u32(apiObj.networkLeasesMaxClientSignalLeases);
    wireObj.network__leases__max_client_relay_leases =
        _api2wire_u32(apiObj.networkLeasesMaxClientRelayLeases);
  }
}

// Section: wire2api
String _wire2api_String(dynamic raw) {
  return raw as String;
}

AttachmentState _wire2api_attachment_state(dynamic raw) {
  return AttachmentState.values[raw];
}

int _wire2api_u32(dynamic raw) {
  return raw as int;
}

int _wire2api_u8(dynamic raw) {
  return raw as int;
}

Uint8List _wire2api_uint_8_list(dynamic raw) {
  return raw as Uint8List;
}

void _wire2api_unit(dynamic raw) {
  return;
}

VeilidState _wire2api_veilid_state(dynamic raw) {
  final arr = raw as List<dynamic>;
  if (arr.length != 1)
    throw Exception('unexpected arr length: expect 1 but see ${arr.length}');
  return VeilidState(
    attachment: _wire2api_attachment_state(arr[0]),
  );
}

VeilidUpdate _wire2api_veilid_update(dynamic raw) {
  switch (raw[0]) {
    case 0:
      return Attachment(
        _wire2api_attachment_state(raw[1]),
      );
    default:
      throw Exception("unreachable");
  }
}

VeilidVersion _wire2api_veilid_version(dynamic raw) {
  final arr = raw as List<dynamic>;
  if (arr.length != 3)
    throw Exception('unexpected arr length: expect 3 but see ${arr.length}');
  return VeilidVersion(
    major: _wire2api_u32(arr[0]),
    minor: _wire2api_u32(arr[1]),
    patch: _wire2api_u32(arr[2]),
  );
}

// ignore_for_file: camel_case_types, non_constant_identifier_names, avoid_positional_boolean_parameters, annotate_overrides, constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.

/// generated by flutter_rust_bridge
class VeilidFlutterWire implements FlutterRustBridgeWireBase {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  VeilidFlutterWire(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  VeilidFlutterWire.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void wire_startup_veilid_core(
    int port_,
    ffi.Pointer<wire_VeilidConfig> config,
  ) {
    return _wire_startup_veilid_core(
      port_,
      config,
    );
  }

  late final _wire_startup_veilid_corePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64,
              ffi.Pointer<wire_VeilidConfig>)>>('wire_startup_veilid_core');
  late final _wire_startup_veilid_core = _wire_startup_veilid_corePtr
      .asFunction<void Function(int, ffi.Pointer<wire_VeilidConfig>)>();

  void wire_get_veilid_state(
    int port_,
  ) {
    return _wire_get_veilid_state(
      port_,
    );
  }

  late final _wire_get_veilid_statePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'wire_get_veilid_state');
  late final _wire_get_veilid_state =
      _wire_get_veilid_statePtr.asFunction<void Function(int)>();

  void wire_shutdown_veilid_core(
    int port_,
  ) {
    return _wire_shutdown_veilid_core(
      port_,
    );
  }

  late final _wire_shutdown_veilid_corePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'wire_shutdown_veilid_core');
  late final _wire_shutdown_veilid_core =
      _wire_shutdown_veilid_corePtr.asFunction<void Function(int)>();

  void wire_veilid_version_string(
    int port_,
  ) {
    return _wire_veilid_version_string(
      port_,
    );
  }

  late final _wire_veilid_version_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'wire_veilid_version_string');
  late final _wire_veilid_version_string =
      _wire_veilid_version_stringPtr.asFunction<void Function(int)>();

  void wire_veilid_version(
    int port_,
  ) {
    return _wire_veilid_version(
      port_,
    );
  }

  late final _wire_veilid_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'wire_veilid_version');
  late final _wire_veilid_version =
      _wire_veilid_versionPtr.asFunction<void Function(int)>();

  ffi.Pointer<wire_StringList> new_StringList(
    int len,
  ) {
    return _new_StringList(
      len,
    );
  }

  late final _new_StringListPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<wire_StringList> Function(ffi.Int32)>>(
      'new_StringList');
  late final _new_StringList = _new_StringListPtr
      .asFunction<ffi.Pointer<wire_StringList> Function(int)>();

  ffi.Pointer<ffi.Uint32> new_box_autoadd_u32(
    int value,
  ) {
    return _new_box_autoadd_u32(
      value,
    );
  }

  late final _new_box_autoadd_u32Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint32> Function(ffi.Uint32)>>(
          'new_box_autoadd_u32');
  late final _new_box_autoadd_u32 = _new_box_autoadd_u32Ptr
      .asFunction<ffi.Pointer<ffi.Uint32> Function(int)>();

  ffi.Pointer<wire_VeilidConfig> new_box_autoadd_veilid_config() {
    return _new_box_autoadd_veilid_config();
  }
